--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
  
       - name: Maven verify (build + test + package)
         run: |
-          chmod +x /.mvn || true
-          /.mvn -B -ntp -DskipTests=false clean verify
+          chmod +x ./mvnw || true
+          ./mvnw -B -ntp -DskipTests=false clean verify
  
       - name: Publicar artefacto .jar
         uses: actions/upload-artifact@v4
