--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Maven verify (build + test + package)
         run: |
           chmod +x ./mvnw || true
-          ./mvnw -B -ntp -DskipTests=false clean verify
+          ./mvnw package
  
       - name: Publicar artefacto .jar
         uses: actions/upload-artifact@v4
