--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,15 @@
+ollama:
+  api:
+    #url: http://localhost:11434
+    url: http://host.docker.internal:11435
+
 server:
   port: 8086
+
 spring:
+
   main:
-    web-application-type: none
+    web-application-type: reactive
 
   kafka:
     bootstrap-servers: broker:29092
