Add file listing step in workflow
Add step to list files in the build directory

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,12 @@ jobs:
         with:
           name: app-jar
           path: build/
+
+
+      
+      - name: Mostrar archivos en build
+        run: ls -l build
+
  
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
