--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
         <relativePath/>
     </parent>
 
-    <groupId>com.alertbot.ollamaconsumer</groupId>
-    <artifactId>ollama-consumer</artifactId>
+    <groupId>com.alertbot.ollamaservice</groupId>
+    <artifactId>ollama-service</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>ollama</name>
     <description>ollama</description>
