--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Maven verify (build + test + package)
         run: |
           chmod +x ./mvnw || true
-          ./mvnw clean package
+          ./mvnw clean install
  
       - name: Publicar artefacto .jar
         uses: actions/upload-artifact@v4
@@ -57,7 +57,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: app-jar
-          path: target/
+          path: build/
  
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
