--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,9 @@ jobs:
         with:
           name: app-jar
           path: build/
+
+      - name: Mostrar archivos en build
+        run: ls -l build
  
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
