--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,7 +84,13 @@ jobs:
             type=ref,event=tag
             type=sha
             type=raw,value=latest,enable={{is_default_branch}}
- 
+      
+      - name: Colocar el JAR en target/
+        run: |
+          mkdir -p target
+          cp build/*.jar target/
+          ls -la target
+
       - name: Construir y publicar imagen
         uses: docker/build-push-action@v6
         with:
