Fix JAR copy path in GitHub Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Colocar el JAR en target/
         run: |
           mkdir -p target
-          cp build/*.jar target/
+          cp build/target/*.jar target/
           ls -la target
 
       - name: Construir y publicar imagen
