--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,15 +12,17 @@ spring:
     web-application-type: reactive
 
   kafka:
-    bootstrap-servers: broker:29092
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:broker:29092}
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
     consumer:
       group-id: whatsapp-in-group
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
+      key-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
       auto-offset-reset: earliest
     properties:
-      schema.registry.url: http://schema-registry:8081
+      spring.deserializer.key.delegate.class: org.apache.kafka.common.serialization.StringDeserializer
+      spring.deserializer.value.delegate.class: io.confluent.kafka.serializers.KafkaAvroDeserializer
+      schema.registry.url: ${SPRING_CLOUD_SCHEMA_REGISTRY_CLIENT_ENDPOINT:http://schema-registry:8081}
       specific.avro.reader: true
