--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 ollama:
   api:
-    url: http://172.17.0.1:11434
-    #url: http://host.docker.internal:11434
+    #url: http://172.17.0.1:11434
+    url: http://host.docker.internal:11434
 
 server:
   port: 8086
