--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,3 +108,20 @@ jobs:
         if: ${{ github.event_name != 'pull_request' }}
         run: |
           echo "${{ steps.meta.outputs.tags }}"
+
+
+      - name: Crear .env en servidor remoto
+        if: ${{ github.event_name != 'pull_request' }}
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: |
+            mkdir -p /home/ubuntu/lidarr/music/botalerts
+
+            cat << 'EOF' > /home/ubuntu/lidarr/music/botalerts/.env
+            GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
+            EOF
+
+            chmod 600 /home/ubuntu/lidarr/music/botalerts/.env
