--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -41,4 +41,4 @@ spring:
         base-url: https://api.groq.com/openai
         chat:
           options:
-            model: llama3.1 8B
+            model: llama-3.1-8b-instant
