--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -37,8 +37,8 @@ spring:
 
     ai:
       openai:
-        api-key: ${GROQ_API_KEY}
-        base-url: https://api.groq.com/openai
+        api-key: ${SPRING_AI_OPENAI_API_KEY}
+        base-url: ${SPRING_AI_OPENAI_BASE_URL}
         chat:
           options:
             model: llama-3.1-8b-instant
