--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -38,7 +38,7 @@ spring:
     ai:
       openai:
         api-key: ${SPRING_AI_OPENAI_API_KEY}
-        base-url: ${SPRING_AI_OPENAI_BASE_URL}
+        base-url: https://api.groq.com/openai
         chat:
           options:
             model: llama-3.1-8b-instant
